--- a/Dashboard/src/App.css
+++ b/Dashboard/src/App.css
@@ -1,1 +1,13 @@
 
+  .logoUniverse{
+    height: 60px;
+    width: 200px;
+  }
+
+  /* .mainUniverse{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  } */
+  
